// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/molecules/TagListPlain snapshot 1`] = `
<ul
  className="flex flex-wrap gap-x-2 gap-y-1"
>
  <li>
    <a
      href="/articles/tags/komatshna"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #小松菜
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/mozzarella"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #モッツァレラ
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/lettuce"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #レタス
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/minced_meat"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #挽き肉
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/rice"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #ごはん
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/aburaage"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #油揚げ
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/onion"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #玉ねぎ
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/udon"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #うどん
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/miso_soup"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #味噌汁
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/tomato"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #トマト
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/preparation"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #仕込み
      </span>
    </a>
  </li>
  <li>
    <a
      href="/articles/tags/ooba"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <span
        className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
      >
        #大葉
      </span>
    </a>
  </li>
</ul>
`;

exports[`components/molecules/TagListPlain snapshot 2`] = `
<ul
  className="flex flex-wrap gap-x-2 gap-y-1"
>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #小松菜
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #モッツァレラ
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #レタス
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #挽き肉
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #ごはん
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #油揚げ
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #玉ねぎ
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #うどん
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #味噌汁
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #トマト
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #仕込み
    </span>
  </li>
  <li>
    <span
      className="inline-block text-sm leading-tight text-gray-600 dark:text-gray-300"
    >
      #大葉
    </span>
  </li>
</ul>
`;
